ecmascript/parser/tests/test262-error-references/fail/d17d3aebb6a3cf43.js.stderr
error: Destructuring bindings require initializers
 --> $DIR/tests/test262-parser/fail/d17d3aebb6a3cf43.js:1:24
  |
1 | "use strict"; for (let {a: b = let};;) {}
  |                        ^^^^^^^^^^^^

error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/test262-parser/fail/d17d3aebb6a3cf43.js:1:32
  |
1 | "use strict"; for (let {a: b = let};;) {}
  |                                ^^^

